few changes, work in progress

--- a/index.html
+++ b/index.html
@@ -73,14 +73,21 @@
         </div>
 
 <!--------------------------------------CONTENT----------------------------------------->   
-        <section id="content">  <!--main content contained here-->
+    			
+		<article id="banner">
+				<img src="images/png/Toronto.PNG" >
+			
+		</article>
+		<section id="content">  <!--main content contained here-->
+			
+	
             <section id="belowBannerArea"> <!--first section directly below banner-->
                 <article id="LSarea"> <!--left side area below banner, contains big image and description-->
-                   <article id="banner"> <!--banner contains multiple images with fade transitions-->
-						<img class="first-image" src="images/banner.png" height="300px" width="300px" show>
-						<img class = "second-image" src="images/bus.png" height="300px" width="300px">
-						<img class="third-image" src="images/car.png" height="300px"width="300px">
-						<img class="fourth-image" src="images/invest.png" height="300px" width="300px">
+                   <article id="circle"> <!--banner contains multiple images with fade transitions-->
+						<img class="first-image" src="images/InauguralClass/1.PNG" height="300px" width="300px" show>
+						<img class = "second-image" src="images/InauguralClass/2.png" height="300px" width="300px">
+						<img class="third-image" src="images/InauguralClass/3.png" height="300px"width="300px">
+						<img class="fourth-image" src="images/InauguralClass/4.png" height="300px" width="300px">
 						<!-- <img src="images/banner.png" alt="temporary place holder" height="300px"> -->
 					</article>
 
