Added links to horizontal nav

--- a/OurPartners.html
+++ b/OurPartners.html
@@ -58,16 +58,16 @@
 					<div id="horizontalNav">
 						<ul>
 							<li id="aboutus">
-								<a href="#">About Us</a>
+								<a href="Aboutus.html">About Us</a>
 							</li>
 							<li id="programs">
-								<a href="#">Our Programs</a>
+								<a href="OurPrograms.html">Our Programs</a>
 							</li>
 							<li id="partners">
-								<a href="#">Our Partners</a>
+								<a href="OurPartners.html">Our Partners</a>
 							</li>
 							<li id="news">
-								<a href="#">News and Events</a>
+								<a href="NewsandEvents.html">News and Events</a>
 							</li>
 
 						</ul>
