--- a/OurPrograms.html
+++ b/OurPrograms.html
@@ -55,16 +55,16 @@
                 <div id="horizontalNav"> <!--this div contains the standard window-spanning nav usually used when browser is full size-->
                     <ul>
                     	<li id="aboutus">
-				<a href="Aboutus.html">About Us</a>
+				<a href="Aboutus.html" id="navButton">About Us</a>
 			</li>
 			<li id="programs">
-				<a href="OurPrograms.html">Our Programs</a>
+				<a href="OurPrograms.html" id="navButton">Our Programs</a>
 			</li>
 			<li id="partners">
-				<a href="OurPartners.html">Our Partners</a>
+				<a href="OurPartners.html" id="navButton">Our Partners</a>
 			</li>
 			<li id="news">
-				<a href="NewsandEvents.html">News and Events</a>
+				<a href="NewsandEvents.html" id="navButton">News and Events</a>
 			</li>
                     </ul>
                 </div>
