updated html with smaller nav

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>NPower Canada</title>
 	<link href="css/general.css" type="text/css" rel="stylesheet">
-	<link href="css/index.css" type="text/css" rel="stylesheet"
+	<link href="css/index.css" type="text/css" rel="stylesheet">
 	<script src="js/interact.js"></script>
 </head>
 <!---------------------------------------BODY----------------------------------------->  
@@ -141,23 +141,23 @@
 <!-------------------------------------TESTIMONIES--------------------------------------->             
             <article id="testimony"> <!--contains multiple testimonies-->
                 <div class="testimonies" id="testimony1">
-                    <img src=""width="250px" height="250px">
+                    <img src="images/InauguralClass/eric_test.png"width="200px" height="200px">
                     <div class="testimoniesContent">
-                    <h2>Name1</h2>
+                    <h2>Eric Lui</h2>
                     <p>"Great Program wow amazing"</p>
                     </div>
                 </div>
                 <div class="testimonies" id="testimony2">
-                    <img src="" width="250px" height="250px">
+                    <img src="images/InauguralClass/godfrey_test.png" width="200px" height="200px">
                     <div class="testimoniesContent" id="testimoniesContent2">
-                    <h2>Name2</h2>
+                    <h2>Godfrey</h2>
                     <p>"Great Program wow amazing"</p>
                     </div>
                 </div> 
                 <div class="testimonies" id="testimony3">
-                    <img src=""width="250px" height="250px">
+                    <img src="images/InauguralClass/merjul_test.png"width="200px" height="200px">
                     <div class="testimoniesContent">
-                    <h2>Name3</h2>
+                    <h2>Merjul</h2>
                     <p>"Great Program wow amazing"</p>
                     </div>
                 </div> 
