--- a/OurPartners.html
+++ b/OurPartners.html
@@ -17,7 +17,7 @@
 			<div id="logoAndSocialMedia">
 				<header>
 					<a href="index.html">    <!-- logo -->
-					<img src="images/npower-tsc-canada-logo.CYAN.png" id="npowerlogo" width="400px">  
+					<img src="images/npower-tsc-canada-logo.WHITE.png" id="npowerlogo" width="300px">  
 					</a>
 					<p id="slogan"><small> Tech Skills. Opportunities. Brighter Futures. </small></p>
                     <div class="socialMedia">  <!--social media links-->
