--- a/OurPrograms.html
+++ b/OurPrograms.html
@@ -3,6 +3,7 @@
 <head>
 <title>Our Programs</title>
 	<link href="css/general.css" type="text/css" rel="stylesheet">
+	<link href="css/programs.css" type="text/css" rel="stylesheet">
 		<!--- please connect webpage -->
 </head>
 
@@ -75,22 +76,56 @@
 <!--------------------------------------CONTENT----------------------------------------->   
         <div id="contentContainer">
             <article>
-                    <h2>Our Technology Service Corp</h2>
-                    <p> Ipsom </p>
-                    <p> Ipsom </p>
+                    <h2> Technology Service Corps Canada:</h2>
+                    <img src="images/InauguralClass/InauguralClass.jpg">
+                    <p>We provide free technology and professional skills training. The program includes technical classes, mentoring from business leaders, internships and career development workshops at leading corporations and nonprofits, industry-recognized certifications as well as employment and alumni services. More than 80% of our alumni are employed or pursuing higher education within one year of graduation. 
+					</p>
+					<p>
+					Young adult students participate in an extensive 5-6 month program that includes detailed classroom work, professional mentoring, internship and job placement support. 
+				  	</p>
             </article>
-            <section>
+			<article>
+				<h4>
+					Eligibility Requirements
+				</h4>
+				<ul>
+					<li>
+						Successful applicants must have achieved a high school diploma and be legal to work in Canada (ages 18-29)
+					</li>
+					<li>
+						Graduates are required to successfully complete all coursework and have a strong attendance record, including during the internship period
+					</li>
+				</ul>
+			</article>
+            <section id="LSandRS">
                 <article>
-                    <h2>
-                        Left Side
-                    </h2>
+                    <h3>
+					Development Stream
+                    </h3>
+					<p>
+					Ipsom Loree Something Something
+					</p>
                 </article>
                 <article>
-                    <h2> Right Side</h2>
+                    <h3> Service Analyst</h3>
+					<p>
+					ipsom loreee something something
+					</p>
                 </article>
             </section>
+			<article>
+				<h2>
+					The Community Corps Canada:
+				</h2>
+				<p>
+					The Community Corps Canada is a skills-based volunteering program connecting technology professionals with high impact nonprofits and innovative education partners. Our tech volunteers enable schools and nonprofits across North America to use technology more effectively and inspire the next generation to pursue careers in science, technology, engineering and math (STEM).
+				</p>
+			</article>
         
         </div>
+		
+		<!-------------------------------------APPLY NOW---------------------------------------->        
+        <button id="applynow">Apply Now</button>
         
 <!--------------------------------------FOOTER------------------------------------------>        
         <footer>
