css improvements & index.html
updated index.html & index.css, improvements to general.css, added apply image

--- a/testimonies.html
+++ b/testimonies.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>NPower Canada</title>
-	<link href="css/testimonies.css" type="text/css" rel="stylesheet">
 	<link href="css/general.css" type="text/css" rel="stylesheet">
+	<link href="css/testimonies.css" type="text/css" rel="stylesheet">
 	
 	<script src="js/interact.js"></script>
 	<script src="js/testimonies.js" defer></script>
@@ -19,7 +19,7 @@
         	<div id="logoAndSocialMedia">
 				<header>
 					<a href="index.html">    <!-- logo -->
-					<img src="images/npower-tsc-canada-logo.CYAN.png" id="npowerlogo" width="400px">  
+					<img src="images/npower-tsc-canada-logo.WHITE.png" id="npowerlogo" width="300px">  
 					</a>
 					<p id="slogan"><small> Tech Skills. Opportunities. Brighter Futures. </small></p>
                     <div class="socialMedia">  <!--social media links-->
@@ -362,6 +362,7 @@
 					</div>
 					<img id="toggle12" src="images/people/Class_1_Graduation_Brochure-16.png" height="200px" width="200px">
 				</article>
+			</section>
 <!-------------------------------------APPLY NOW---------------------------------------->        
         <button id="applynow">Apply Now</button>
 <!--------------------------------------FOOTER------------------------------------------>        
